Fix back to experience z-index

--- a/components/backToExperience/BackToExperience.scss
+++ b/components/backToExperience/BackToExperience.scss
@@ -4,6 +4,8 @@
   background-color: var(--color-bg-dark);
   color: var(--color-white);
   overflow: hidden;
+  position: relative;
+  z-index: 1;
 
   &.isLight {
     background-color: var(--color-concrete);
